2011-05-28  Jim Meyering  <meyering@redhat.com>

	parse-datetime.y: accommodate -Wstrict-overflow
	* lib/parse-datetime.y (yylex): Rearrange pointer arithmetic to
	placate -Wstrict-overflow.

	trim: avoid a warning from -O2 -Wstrict-overflow
	* lib/trim.c (trim2): Declare local to be "unsigned int", not "int".

2011-05-28  Bruno Haible  <bruno@clisp.org>

	getloadavg: Remove an unreliable safety check.
	* m4/getloadavg.m4 (gl_GETLOADAVG): Drop argument. Remove test whether
	getloadavg.c is in place.
	* modules/getloadavg (configure.ac): Drop argument of gl_GETLOADAVG.
	Reported by Sam Steingold <sds@gnu.org>.

2011-05-26  Simon Josefsson  <simon@josefsson.org>

	* lib/gen-uni-tables.c: Say "gen-uni-tables.c" consistently.

2011-05-26  Bruno Haible  <bruno@clisp.org>

	mbsrchr: Avoid collision with system function on Interix.
	* lib/string.in.h (mbsrchr): Define as rpl_mbsrchr also on Interix.
	Reported by Markus Duft <mduft@gentoo.org>.

2011-05-25  Eric Blake  <eblake@redhat.com>

	getcwd: work around mingw bug
	* lib/getcwd-lgpl.c (rpl_getcwd): Guarantee correct error.
	* doc/posix-functions/getcwd.texi (getcwd): Document it.
	Reported by Matthias Bolte.

2011-05-24  Paul Eggert  <eggert@cs.ucla.edu>

	test-intprops: disable -Wtype-limits diagnostics
	* tests/test-intprops.c: Use a pragma to ignore -Wtype-limits
	diagnostics.  Otherwise, the integer overflow macros generate many
	diagnostics.  Reported by Jim Meyering in
	<http://lists.gnu.org/archive/html/bug-gnulib/2011-05/msg00528.html>.

2011-05-24  Eric Blake  <eblake@redhat.com>

	docs: document recently fixed glibc printf bug
	* doc/posix-functions/fprintf.texi (fprintf): Document it.
	* doc/posix-functions/printf.texi (printf): Likewise.
	* doc/posix-functions/vfprintf.texi (vfprintf): Likewise.
	* doc/posix-functions/vprintf.texi (vprintf): Likewise.

2011-05-24  Eric Blake  <eblake@redhat.com>

	tests: fix logic bug in init.sh
	* tests/init.sh: (gl_set_x_corrupts_stderr_): Clear for successful
	shell.
